--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -27,6 +27,9 @@ Thumbs.db
 .env
 .env.*
 
+# GCP service account credentials
+service-account.json
+
 # Testing / coverage
 .pytest_cache/
 .coverage
