--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,34 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:16-alpine
+    container_name: victorias-postgres
+    environment:
+      POSTGRES_USER: appuser
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: victoria_db
+    volumes:
+      - victorias-postgres:/var/lib/postgresql/data
+    ports:
+      - '5432:5432'
+
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: nutri-scan-backend
+    container_name: victorias-backend
+    depends_on:
+      - db
     ports:
       - '5000:5000'
     env_file:
       - ./backend/.env
+    environment:
+      DATABASE_URL: postgresql://appuser:secret@db:5432/victoria_db
+    volumes:
+      - ./backend/service-account.json:/app/service-account.json:ro
     restart: unless-stopped
+
+volumes:
+  victorias-postgres:
